# taskflow

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  dataflow_arith.cpp  nodeflow.cpp  nodeflow_variadic.cpp  simple.cpp  varnodeflow.cpp
readme/: guide_workflow.md
scripts/: sh_build.sh
workflow/: CMakeLists.txt  KEY_BASED_API.md  README.md
workflow/examples/: advanced_control_flow.cpp  algorithm_example.cpp  declarative_example.cpp  keyed_example.cpp  loop_only.cpp  unified_example.cpp
workflow/include/workflow/: nodeflow.hpp  nodeflow_impl.hpp
workflow/src/: nodeflow.cpp
